# Ablirotate

./: .gitignore  APPROACH.md  APPROACH_CRITIQUE.md  AUTONOMOUS_AGENT.md  COMPARATIVE_STUDY.md  INTERLEAVED_TRAINING.md  README.md  critique.md  pyproject.toml
ablirotate/: __init__.py  defrag.py  differential.py  gemma4.py  pruner.py  qwen_coder.py  tracker.py
ablirotate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_defrag.py  test_differential.py  test_gemma4.py  test_pruner.py  test_qwen_coder.py  test_tracker.py
